show color scheme button on mobile

--- a/khoBlog/templates/tailwind/featured_big_posts.html
+++ b/khoBlog/templates/tailwind/featured_big_posts.html
@@ -2,7 +2,7 @@
   <li class="flow-root">
     <a href="{{ object.get_absolute_url }}" class="-m-3 p-3 flex rounded-2xl hover:bg-gray-100 dark:hover:bg-jumbo-700 transition ease-in-out duration-150">
       <div class="min-w-0 flex-1">
-        <h4 class="text-base font-medium text-gray-900 dark:text-jumbo-50 truncate">
+        <h4 class="font-medium text-gray-900 dark:text-jumbo-50 truncate">
           {{ object.title }}
         </h4>
         <p class="mt-1 text-sm text-gray-500 dark:text-jumbo-300">
