Errors are now flamingo, even in light mode updated reqs

--- a/blog/templates/blog/clone_post.html
+++ b/blog/templates/blog/clone_post.html
@@ -26,7 +26,7 @@
       {% endfor %}
     </div>
 
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
@@ -43,10 +43,10 @@
         <span class="text-sm">{{ form.featured_title.help_text }}</span>
       {% endif %}
       {% for error in form.title.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
       {% for error in form.featured_title.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -59,7 +59,7 @@
         <span class="text-sm">{{ form.categories.help_text }}</span>
       {% endif %}
       {% for error in form.categories.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -70,7 +70,7 @@
         <span class="text-sm">{{ form.tags.help_text }}</span>
       {% endif %}
       {% for error in form.tags.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -86,7 +86,7 @@
         <span class="text-sm">{{ form.series.help_text }}</span>
       {% endif %}
       {% for error in form.series.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -99,7 +99,7 @@
         <span class="text-sm">{{ form.description.help_text }}</span>
       {% endif %}
       {% for error in form.description.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -111,7 +111,7 @@
         <span class="text-sm">{{ form.body.help_text }}</span>
       {% endif %}
       {% for error in form.body.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -124,7 +124,7 @@
         <span class="text-sm">{{ form.image.help_text }}</span>
       {% endif %}
       {% for error in form.image.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -137,7 +137,7 @@
         <span class="text-sm">{{ form.withdrawn.help_text }}</span>
       {% endif %}
       {% for error in form.withdrawn.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -150,7 +150,7 @@
         <span class="text-sm">{{ form.is_outdated.help_text }}</span>
       {% endif %}
       {% for error in form.is_outdated.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -163,7 +163,7 @@
         <span class="text-sm">{{ form.featuring_state.help_text }}</span>
       {% endif %}
       {% for error in form.featuring_state.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -176,7 +176,7 @@
         <span class="text-sm">{{ form.publication_state.help_text }}</span>
       {% endif %}
       {% for error in form.publication_state.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -187,7 +187,7 @@
         <span class="text-sm">{{ form.pub_date.help_text }}</span>
       {% endif %}
       {% for error in form.pub_date.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -204,10 +204,10 @@
         <span class="text-sm">{{ form.url_to_article_title.help_text }}</span>
       {% endif %}
       {% for error in form.url_to_article.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
       {% for error in form.url_to_article_title.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -220,7 +220,7 @@
         <span class="text-sm">{{ form.language.help_text }}</span>
       {% endif %}
       {% for error in form.language.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
