--- a/portfolio/templates/portfolio/create_project.html
+++ b/portfolio/templates/portfolio/create_project.html
@@ -16,7 +16,7 @@
       {% endfor %}
     </div>
 
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
@@ -29,7 +29,7 @@
         <span class="text-sm">{{ form.title.help_text }}</span>
       {% endif %}
       {% for error in form.title.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -42,7 +42,7 @@
         <span class="text-sm">{{ form.snippet.help_text }}</span>
       {% endif %}
       {% for error in form.snippet.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -55,7 +55,7 @@
         <span class="text-sm">{{ form.description.help_text }}</span>
       {% endif %}
       {% for error in form.description.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -68,7 +68,7 @@
         <span class="text-sm">{{ form.learned.help_text }}</span>
       {% endif %}
       {% for error in form.learned.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -83,7 +83,7 @@
         <span class="text-sm">{{ form.technology.help_text }}</span>
       {% endif %}
       {% for error in form.technology.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -98,7 +98,7 @@
         <span class="text-sm">{{ form.website.help_text }}</span>
       {% endif %}
       {% for error in form.website.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -113,7 +113,7 @@
         <span class="text-sm">{{ form.repository.help_text }}</span>
       {% endif %}
       {% for error in form.repository.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -125,7 +125,7 @@
         <span class="text-sm">{{ form.slug.help_text }}</span>
       {% endif %}
       {% for error in form.slug.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
