--- a/portfolio/templates/portfolio/edit_sub_project.html
+++ b/portfolio/templates/portfolio/edit_sub_project.html
@@ -15,7 +15,7 @@
       {% endfor %}
     </div>
 
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
@@ -28,7 +28,7 @@
         <span class="text-sm">{{ form.title.help_text }}</span>
       {% endif %}
       {% for error in form.title.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -41,7 +41,7 @@
         <span class="text-sm">{{ form.snippet.help_text }}</span>
       {% endif %}
       {% for error in form.snippet.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -54,7 +54,7 @@
         <span class="text-sm">{{ form.description.help_text }}</span>
       {% endif %}
       {% for error in form.description.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -67,7 +67,7 @@
         <span class="text-sm">{{ form.learned.help_text }}</span>
       {% endif %}
       {% for error in form.learned.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -82,7 +82,7 @@
         <span class="text-sm">{{ form.link_in_repo.help_text }}</span>
       {% endif %}
       {% for error in form.link_in_repo.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -95,7 +95,7 @@
         <span class="text-sm">{{ form.featured.help_text }}</span>
       {% endif %}
       {% for error in form.featured.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -107,7 +107,7 @@
         <span class="text-sm">{{ form.slug.help_text }}</span>
       {% endif %}
       {% for error in form.slug.errors %}
-        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
