--- a/khoBlog/templates/account/password_reset.html
+++ b/khoBlog/templates/account/password_reset.html
@@ -9,7 +9,7 @@
   <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
   <form enctype="multipart/form-data" method="post" novalidate="novalidate">
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
