--- a/khoBlog/templates/account/password_reset_from_key.html
+++ b/khoBlog/templates/account/password_reset_from_key.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <form enctype="multipart/form-data" method="post" novalidate="novalidate">
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
