--- a/khoBlog/templates/comments/form.html
+++ b/khoBlog/templates/comments/form.html
@@ -17,7 +17,7 @@
 
     {{ form.honeypot }}
 
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
@@ -26,7 +26,7 @@
       {{ form.title|add_class:"form-control" }}
     </div>
     {% for error in form.title.errors %}
-      <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+      <small class="text-flamingo-600">{{ error }}</small>
     {% endfor %}
 
     <div class="field mb-2">
@@ -34,7 +34,7 @@
       {{ form.comment|add_class:"form-control" }}
     </div>
     {% for error in form.comment.errors %}
-      <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
+      <small class="text-flamingo-600">{{ error }}</small>
     {% endfor %}
 
     <input type="hidden" name="next" value="{% url 'comments-xtd-sent' %}"/>
