--- a/pages/templates/pages/edit_page.html
+++ b/pages/templates/pages/edit_page.html
@@ -13,7 +13,7 @@
 
 {% block content %}
   <form enctype="multipart/form-data" method="post" novalidate="novalidate">
-    <div class="text-red-600 dark:text-flamingo-600">
+    <div class="text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
